# crab_gl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/game/: game_state.rs  mod.rs  particle.rs  world.rs
src/math/: mod.rs  random.rs  vec2f.rs  vec2i.rs  vec3f.rs  vec4f.rs
src/renderer/: circle_buffer.rs  context.rs  mod.rs  shader.rs  vertex_array.rs
src/renderer/shader_source/: default_frag.glsl  default_vertex.glsl  mod.rs
src/shapes/: mod.rs  triangle.rs
src/util/: error.rs  mod.rs
src/util/log/: logger.rs  mod.rs
web/: index.html  main.js
