[package]
name = "crab_gl"
version = "0.1.0"
edition = "2021"
authors = ["Tom Wiseman <tom.h.wiseman@gmail.com>"]
description = "A simple webgl viewer written in rust"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"
pkg = "3.0.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
  'Document',
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation',
  'AngleInstancedArrays'
]
